testsuite/tests/patsyn/should_fail/patsyn_where_fail3.hs
{-# LANGUAGE PatternSynonyms #-}

module PatSynWhereFail3 where

pattern P x <- x:xs where {}
